@@ -210,7 +210,7 @@ void IIIF::run( Session* session, const string& src )
                      << "     \"" << IIIF_PROFILE << "\"," << endl
                      << "     { \"formats\" : [ \"jpg\" ]," << endl
                      << "       \"qualities\" : [ \"native\",\"color\",\"gray\" ]," << endl
-                     << "       \"supports\" : [\"regionByPct\",\"sizeByForcedWh\",\"sizeByWh\",\"sizeAboveFull\",\"rotationBy90s\",\"mirroring\"] }" << endl
+                     << "       \"supports\" : [\"regionByPct\",\"regionSquare\",\"sizeByForcedWh\",\"sizeByWh\",\"sizeAboveFull\",\"rotationBy90s\",\"mirroring\"] }" << endl
                      << "  ]" << endl
                      << "}";
 
@@ -260,6 +260,21 @@ void IIIF::run( Session* session, const string& src )
         region[2] = 1.0;
         region[3] = 1.0;
       }
+      // Square region export using centered crop
+      else if (regionString == "square" ){
+        if ( height > width ){
+	  float h = (float)width/(float)height;
+	  session->view->setViewTop( (1-h)/2.0 );
+	  session->view->setViewHeight( h );
+        }
+	else if ( width > height ){
+	  float w = (float)height/(float)width;
+	  session->view->setViewLeft( (1-w)/2.0 );
+	  session->view->setViewWidth( w );
+        }
+	// No need for default else clause if image is already square
+      }
+
       // Region export request
       else{
 
